Fixed overlap on github screen

--- a/body-styles.css
+++ b/body-styles.css
@@ -246,7 +246,7 @@
     border-left: 4px solid var(--text_alpha);
     border-bottom: 4px solid var(--text_alpha);
     border-bottom-left-radius: 20px;
-    padding: 0 1rem 1rem 1rem;
+    padding: 0 1rem 1rem 30px;
     margin-top: 1rem;
 }
 
@@ -264,9 +264,9 @@
     color: var(--text_alpha);
     position: absolute;
     top: 0;
-    left: 50%;
+    left: 0;
     white-space: nowrap;
-    transform: translate(-50%, -150%);
+    transform: translate(30px, -150%);
 }
 
 .github-push-event {
@@ -292,7 +292,7 @@
 }
 
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     max-width: 250px;
     border-radius: 20px;
@@ -302,7 +302,7 @@
 }
 
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     cursor: pointer;
 }
 
